tests/testing_data/anonymized_testing_data/invalid_data/invalid_fields/noEchoTime.dcm
version https://git-lfs.github.com/spec/v1
oid sha256:711c492f523640baddc139edb939f186c815bb1d6d43750c8afc1363d4b178d9
size 64868
